--- a/main-project/manifest.json
+++ b/main-project/manifest.json
@@ -4,6 +4,6 @@
     "name": "Leads tracker",
     "action": {
         "default_popup": "index.html",
-        "default_icon": "icon.png"
+        "default_icon": "dollar.png"
     }
 }
